Update find bar button's state properly

Find paste board can be updated by current browser or
other browsers/applications.

1. By Current Browser(When suppressPboardUpdateActions_ is true):
We shouldn't en/disable buttons because it will be updated later based
on results. Otherwise, flickering happens(bug 815105).

2. By Others(When suppressPboardUpdateAcitons_ is false):
We should en/disable buttons based on text length, not on result.
prepopulateText() already does this, so revert the previous
patch. Why the bug 739735 happnend before was that we call
clearFindResultsForCurrentBrowser() after prepopulateText().
Therfore swapping their order can resolve the bug.

Bug: 815105, 739735
Change-Id: I85dc12e151fb7087a3bfab1aaf2b5d8acc3ee6b1
Reviewed-on: https://chromium-review.googlesource.com/936943
Commit-Queue: SangWoo Ko <sangwoo108@gmail.com>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539684}
Former-commit-id: f7e7f4fa0e58f902ff462fe08310291967e4e77d